# promptchad

./: .gitignore  README.md  config.toml.example  devenv.nix  promptchad.py  pyproject.toml  web_ui.py
prompts/: sample.txt  sample_officer.txt
templates/: index.html
